--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -19,7 +19,7 @@
           <a href="./../packages.html">packages</a>
           <a href="#services">services</a>
           <a href="./gallery.html" style="color: orange;">Gallary</a>
-          <a href="#review">review</a>
+          <a href="./../review/review.html">review</a>
           <a href="#contact">contact</a>
         </nav>
         <div class="icons">
