--- a/packages.html
+++ b/packages.html
@@ -95,11 +95,10 @@
                 <i class="fa-solid fa-leaf"></i>
                </div>
               <div class="button">
-                <a href="#" class="btn">View Details</a>
+                <a href="https://en.wikipedia.org/wiki/Shimla" target="_blank" class="btn">View Details</a>
               </div>
           
           </div>
-          
         </div>
 
         <div class="box">
