--- a/index.html
+++ b/index.html
@@ -226,37 +226,37 @@
             <div class="box">
                 <i class="fa-solid fa-hotel"></i>
                 <h3>Best Hotels</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, iste? Maxime odio commodi ducimus impedit qui! Ipsam natus minus veniam quos neque, deserunt nobis illo voluptates et iste repellendus aspernatur.</p>
+                <p>"Experience luxury and comfort at its finest with our handpicked selection of the best hotels, offering impeccable service and exquisite amenities."</p>
             </div>
 
             <div class="box">
                 <i class="fa-solid fa-utensils"></i>
                 <h3>Food and Drinks</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, iste? Maxime odio commodi ducimus impedit qui! Ipsam natus minus veniam quos neque, deserunt nobis illo voluptates et iste repellendus aspernatur.</p>
+                <p>"Savor delectable cuisines from around the world as you explore new destinations, with our top-notch food facilities designed to cater to your gastronomic desires."</p>
             </div>
             
             <div class="box">
                 <i class="fa-solid fa-bullhorn"></i>
                 <h3>Experienced guides</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, iste? Maxime odio commodi ducimus impedit qui! Ipsam natus minus veniam quos neque, deserunt nobis illo voluptates et iste repellendus aspernatur.</p>
+                <p>"Embark on a journey led by our experienced guides, who bring destinations to life with their wealth of knowledge and captivating storytelling."</p>
             </div>
 
             <div class="box">
                 <i class="fa-solid fa-house"></i>
                 <h3>family Trip</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, iste? Maxime odio commodi ducimus impedit qui! Ipsam natus minus veniam quos neque, deserunt nobis illo voluptates et iste repellendus aspernatur.</p>
+                <p>"Create unforgettable family memories with our tailor-made trips, designed to cater to the unique needs and preferences of every family member."</p>
             </div>
             
             <div class="box">
                 <i class="fa-solid fa-plane"></i>
                 <h3>Fastest travel</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, iste? Maxime odio commodi ducimus impedit qui! Ipsam natus minus veniam quos neque, deserunt nobis illo voluptates et iste repellendus aspernatur.</p>
+                <p>"Experience swift and hassle-free journeys with our commitment to providing the fastest travel options, allowing you to maximize your adventures."</p>
             </div>
 
             <div class="box">
                 <i class="fa-solid fa-person-cane"></i>
                 <h3>old aged and disabled tour</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, iste? Maxime odio commodi ducimus impedit qui! .</p>
+                <p>"Experience inclusivity and thoughtful assistance throughout your trip, with our specialized services catering to the unique requirements of elderly and disabled travelers."</p>
             </div>
         </div>
         <div class="button" id="buttonExploreMore">
