--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
     <!-- gallary section ends here  -->
     
     <!-- review section starts here -->
-    <section class="review" id="review">
+    <!-- <section class="review" id="review">
         <h1>Customer's review</h1>
         <div class="box-container">
             <div class="box">
@@ -428,15 +428,16 @@
                 
                 </div>
                 </div>
-            </div>
-            <div class="knowmore" id="knowmore">
+            </div> -->
+            <!-- <div class="knowmore" id="knowmore">
             <a href="#" class="btn">Know More</a>
-            </div>
+            </div> -->
     </section>
     <!-- review section ends here  -->
 
 
    <section class="developers">
+    <h1>Customer's review</h1>
         <div class="swiper mySwiper containerop">
             <div class="swiper-wrapper content">
                 <div class="swiper-slide card">
@@ -565,6 +566,9 @@
         <div class="swiper-pagination"></div> -->
     </div>
   </div>
+  <div class="knowmore" id="knowmore">
+    <a href="#" class="btn">Know More</a>
+    </div>
     </section>
 
 
