--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -11,16 +11,16 @@
 
     <header>
         <div id="menu-bar" class="fas fa-bars"></div>
-        <a href="#" class="logo"> <span>T</span>RAVELO</a>
+        <a href="./../index.html" class="logo"> <span>T</span>RAVELO</a>
   
         <nav class="navbar">
           <a href="./../index.html"  id="homeNav"><i class="fa-solid fa-house"></i></a>
           <a href="./../book.html">book</a>
           <a href="./../packages.html">packages</a>
-          <a href="#services">services</a>
+          <a href="./../index.html#service">services</a>
           <a href="./gallery.html" style="color: orange;">Gallary</a>
           <a href="./../review/review.html">review</a>
-          <a href="#contact">contact</a>
+          <a href="./../contact.html">contact</a>
         </nav>
         <div class="icons">
           <i class="fa-solid fa-user" id="login-btn"></i>
