--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="./index.html"  id="homeNav" style="color: orange;"><i class="fa-solid fa-house"></i></a>
         <a href="./book.html">book</a>
         <a href="./packages.html">packages</a>
-        <a href="#services">services</a>
+        <a href="#service">services</a>
         <a href="./../gallery/gallery.html">Gallary</a>
         <a href="./../review/review.html">review</a>
         <a href="./contact.html">contact</a>
@@ -91,7 +91,7 @@
       </div>
     </section>
     <!-- how it works starts -->
-    <section class="how-it-works">
+    <!-- <section class="how-it-works">
       <div class="howitworks">
         <h3>How it works</h3>
         <div class="secbox">
@@ -115,7 +115,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- how it works section ends -->
 
     <!-- popular destination starts here -->
@@ -132,7 +132,7 @@
             </p>
           </div>
           <div class="button">
-            <a href="#" class="btn">Know More</a>
+            <a href="./packages.html" class="btn">Know More</a>
           </div>
         </div>
 
@@ -148,7 +148,7 @@
               </p>
             </div>
             <div class="button">
-              <a href="#" class="btn">Know More</a>
+              <a href="./packages.html" class="btn">Know More</a>
             </div>
           </div>
 
@@ -161,9 +161,11 @@
               </p>
             </div>
             <div class="button">
-              <a href="#" class="btn">Know More</a>
+              <a href="./packages.html" class="btn">Know More</a>
             </div>
           </div>
+
+
 
           <!-- <div class="box">
             <img src="/media_content/pop1.jpg" alt="pop1" />
@@ -214,11 +216,77 @@
           </div> -->
         </div>
         <div class="button" id="buttonExploreMore">
-        <input type="button" class="btn" value="Explore More">
+        <input type="button" class="btn" value="Explore More" onclick="openindex()">
           </div>
     </section>
     <!-- popular destination ends here -->
-
+      <section class="whytravello">
+        <div class="containerofkrishna">
+          <div class="container-title"><h1>Why Travello??</h1></div>
+          <div class="container-paragraph">
+            <div class="left-content">
+              <ul>
+                <li id="option1">About Us</li>
+                <li id="option2">Our Expertise</li>
+                <li id="option3">Unforgettable Destination</li>
+                <li id="option4">Tailor-Made Experience</li>
+                <li id="option5">Exceptional Services</li>
+                <li id="option6">Sustainable Travel</li>
+              </ul>
+            </div>
+            <div class="right-content">
+              <p class="option1-content">
+                Welcome to Wanderlust Adventures! <br />Experience the world with
+                Wanderlust Adventures, your premier tour and travel company
+                dedicated to creating unforgettable journeys. Whether you're a
+                seasoned traveler or embarking on your first adventure, we have the
+                perfect itinerary to suit your wanderlust.
+              </p>
+              <p class="option2-content">
+                With years of experience in the travel industry, our team of
+                passionate experts curates exceptional tours designed to immerse you
+                in the beauty and cultural richness of every destination. We believe
+                that travel is not just about seeing new places; it's about creating
+                meaningful connections, broadening horizons, and embracing the
+                spirit of adventure.
+              </p>
+              <p class="option3-content">
+                From the pristine beaches of Bali to the majestic mountains of the
+                Swiss Alps, we offer an extensive range of hand-picked destinations
+                that cater to all types of travelers. Whether you seek relaxation,
+                cultural exploration, or thrilling adventures, our diverse selection
+                of tours will cater to your interests and leave you with memories to
+                last a lifetime.
+              </p>
+              <p class="option4-content">
+                At Travelo , we understand that each traveler has
+                unique preferences. That's why we offer tailor-made itineraries,
+                allowing you to customize your journey according to your desires.
+                Our team will work closely with you to craft a personalized
+                experience that aligns with your interests, travel style, and
+                budget. We take care of all the details so you can focus on enjoying
+                your trip.
+              </p>
+              <p class="option5-content">
+                From the moment you contact us until you return home, we strive to
+                provide exceptional service and support. Our friendly and
+                knowledgeable team is available around the clock to answer your
+                questions, offer guidance, and ensure a seamless travel experience.
+                We partner with trusted local guides and accommodations to ensure
+                your comfort and safety throughout your journey.
+              </p>
+              <p class="option6-content">
+                As avid travelers, we recognize the importance of preserving the
+                destinations we visit. We are committed to promoting sustainable
+                tourism practices and minimizing our ecological footprint. Through
+                responsible travel initiatives, we aim to protect the environment,
+                support local communities, and preserve cultural heritage for future
+                generations to enjoy.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     <!-- services section starts here  -->
     <section class="service" id="service">
         <h1>our services</h1>
@@ -275,52 +343,53 @@
                     <div class="content">
                         <h3>Religious Site</h3>
                         <p>Lorem ipsum dolor sit amet.</p>
-                        <input type="button" class="btn" value="See more">
+                        <!-- <input type="button" class="btn" value="See more"> -->
+                        <a href="./gallery/gallery.html" class="btn" style="text-decoration: none;">See more</a>
                     </div>
                 </div>
 
                 <div class="box">
-                    <img src="./media_content/gall2.jpg" alt="gall1">
+                    <img src="./gallery/mountain10.jpg" alt="gall1">
                     <div class="content">
-                        <h3>Religious Site</h3>
+                        <h3>Mountain</h3>
                         <p>Lorem ipsum dolor sit amet.</p>
-                        <input type="button" class="btn" value="See more">
-                    </div>
-                </div>
-
-                <div class="box">
-                    <img src="./media_content/gall3.jpeg" alt="gall1">
-                    <div class="content">
-                        <h3>Religious Site</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <input type="button" class="btn" value="See more">
+                        <a href="./gallery/gallery.html" class="btn" style="text-decoration: none;">See more</a>
                     </div>
                 </div>
 
                 <div class="box">
                     <img src="./media_content/gall5.jpg" alt="gall1">
                     <div class="content">
-                        <h3>Religious Site</h3>
+                        <h3>Historical</h3>
                         <p>Lorem ipsum dolor sit amet.</p>
-                        <input type="button" class="btn" value="See more">
+                        <a href="./gallery/gallery.html" class="btn" style="text-decoration: none;">See more</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./gallery/nature2.jpg" alt="gall1">
+                    <div class="content">
+                        <h3>Nature</h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <a href="./gallery/gallery.html" class="btn" style="text-decoration: none;">See more</a>
+                    </div>
+                </div>
+
+
+                <div class="box">
+                    <img src="./gallery/adv1.jpg" alt="gall1">
+                    <div class="content">
+                        <h3>Adventure</h3>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <a href="./gallery/gallery.html" class="btn" style="text-decoration: none;">See more</a>
                     </div>
                 </div>
 
                 <div class="box">
                     <img src="./media_content/gall3.jpeg" alt="gall1">
                     <div class="content">
-                        <h3>Religious Site</h3>
+                        <h3>Trekking</h3>
                         <p>Lorem ipsum dolor sit amet.</p>
-                        <input type="button" class="btn" value="See more">
-                    </div>
-                </div>
-
-                <div class="box">
-                    <img src="./media_content/gall3.jpeg" alt="gall1">
-                    <div class="content">
-                        <h3>Religious Site</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <input type="button" class="btn" value="See more">
+                        <a href="./gallery/gallery.html" class="btn" style="text-decoration: none;">See more</a>
                     </div>
                 </div>
                 
@@ -567,7 +636,7 @@
     </div>
   </div>
   <div class="knowmore" id="knowmore">
-    <a href="#" class="btn">Know More</a>
+    <a href="./review/review.html" class="btn">Know More</a>
     </div>
     </section>
 
@@ -699,5 +768,132 @@
           '<div class="swiper-slide">Slide ' + ++appendNumber + "</div>",
         ]);
       });</script>
+
+
+      <script>
+      let opt1 = document.getElementById("option1");
+      let opt2 = document.getElementById("option2");
+      let opt3 = document.getElementById("option3");
+      let opt4 = document.getElementById("option4");
+      let opt5 = document.getElementById("option5");
+      let opt6 = document.getElementById("option6");
+
+      let opt1_content = document.querySelector(".option1-content");
+      let opt2_content = document.querySelector('.option2-content');
+      let opt3_content = document.querySelector('.option3-content');
+      let opt4_content = document.querySelector('.option4-content');
+      let opt5_content = document.querySelector('.option5-content');
+      let opt6_content = document.querySelector('.option6-content');
+
+      opt1_content.style.display = "block";
+      opt1.classList.add('active-option');
+      opt2_content.style.display = "none";
+      opt3_content.style.display = "none";
+      opt4_content.style.display = "none";
+      opt5_content.style.display = "none";
+      opt6_content.style.display = "none";
+
+      opt1.addEventListener('click',function(){
+        opt1_content.style.display = "block";
+        opt1.classList.add('active-option');
+      opt2_content.style.display = "none";
+      opt3_content.style.display = "none";
+      opt4_content.style.display = "none";
+      opt5_content.style.display = "none";
+      opt6_content.style.display = "none";
+
+      opt2.classList.remove('active-option');
+      opt3.classList.remove('active-option');
+      opt4.classList.remove('active-option');
+      opt5.classList.remove('active-option');
+      opt6.classList.remove('active-option');
+      
+      })
+
+      opt2.addEventListener('click',function(){
+        opt1_content.style.display = "none";
+      opt2_content.style.display = "block";
+      opt3_content.style.display = "none";
+      opt4_content.style.display = "none";
+      opt5_content.style.display = "none";
+      opt6_content.style.display = "none";
+
+      opt2.classList.add('active-option');
+
+      opt1.classList.remove('active-option');
+      opt3.classList.remove('active-option');
+      opt4.classList.remove('active-option');
+      opt5.classList.remove('active-option');
+      opt6.classList.remove('active-option');
+      })
+
+      opt3.addEventListener('click',function(){
+        opt1_content.style.display = "none";
+      opt2_content.style.display = "none";
+      opt3_content.style.display = "block";
+      opt4_content.style.display = "none";
+      opt5_content.style.display = "none";
+      opt6_content.style.display = "none";
+
+      opt3.classList.add('active-option');
+
+      opt1.classList.remove('active-option');
+      opt2.classList.remove('active-option');
+      opt4.classList.remove('active-option');
+      opt5.classList.remove('active-option');
+      opt6.classList.remove('active-option');
+      })
+
+      opt4.addEventListener('click',function(){
+        opt1_content.style.display = "none";
+      opt2_content.style.display = "none";
+      opt3_content.style.display = "none";
+      opt4_content.style.display = "block";
+      opt5_content.style.display = "none";
+      opt6_content.style.display = "none";
+
+      opt4.classList.add('active-option');
+
+      opt1.classList.remove('active-option');
+      opt2.classList.remove('active-option');
+      opt3.classList.remove('active-option');
+      opt5.classList.remove('active-option');
+      opt6.classList.remove('active-option');
+      })
+
+      opt5.addEventListener('click',function(){
+        opt1_content.style.display = "none";
+      opt2_content.style.display = "none";
+      opt3_content.style.display = "none";
+      opt4_content.style.display = "none";
+      opt5_content.style.display = "block";
+      opt6_content.style.display = "none";
+
+
+      opt5.classList.add('active-option');
+      opt1.classList.remove('active-option');
+      opt3.classList.remove('active-option');
+      opt4.classList.remove('active-option');
+      opt2.classList.remove('active-option');
+      opt6.classList.remove('active-option');
+      })
+
+      opt6.addEventListener('click',function(){
+        opt1_content.style.display = "none";
+      opt2_content.style.display = "none";
+      opt3_content.style.display = "none";
+      opt4_content.style.display = "none";
+      opt5_content.style.display = "none";
+      opt6_content.style.display = "block";
+
+      opt6.classList.add('active-option');
+
+      opt1.classList.remove('active-option');
+      opt3.classList.remove('active-option');
+      opt4.classList.remove('active-option');
+      opt5.classList.remove('active-option');
+      opt2.classList.remove('active-option');
+      })
+      </script>
   </body>
 </html>
