--- a/packages.html
+++ b/packages.html
@@ -17,7 +17,7 @@
     <!-- header section -->
     <header>
       <div id="menu-bar" class="fas fa-bars"></div>
-      <a href="#" class="logo"> <span>T</span>RAVELO</a>
+      <a href="./index.html" class="logo"> <span>T</span>RAVELO</a>
 
       <nav class="navbar">
         <a href="./index.html"  id="homeNav"><i class="fa-solid fa-house"></i></a>
