--- a/contact.html
+++ b/contact.html
@@ -91,22 +91,23 @@
                 <div class="infoBox">
                     <div >
                         <span><ion-icon name="location"></ion-icon></span>
-                        <p>Amrita Vishwa Vidhyapeetham,Bengaluru <br>India</p>
+                        <a href="https://www.google.com/maps/place/Amrita+School+of+Engineering/@12.8949688,77.6731646,17z/data=!3m1!4b1!4m6!3m5!1s0x3bae1339d7500cd3:0x4b4fbdff03bfee09!8m2!3d12.8949688!4d77.6757395!16s%2Fg%2F11j0c5x9pp?entry=ttu" target="_blank">
+                        <p>Amrita Vishwa Vidhyapeetham,Bengaluru <br>India</p></a>
                     </div>
                     <div >
                         <span><ion-icon name="mail"></ion-icon></span>
-                        <a href="#">loremipsum@gmial.com</a>
+                        <a href="mailto: darjun650@gmail.com">darjun650@gmail.com</a>
                     </div>
                     <div >
                         <span><ion-icon name="call"></ion-icon></span>
-                        <a href="tel:+91 9800468910">+91 980 046 8910</a>
+                        <a href="tel:+91 9800468910">+91 9661798904</a>
                     </div>
                     <!--Social Media-->
                     <ul class="sci">
-                        <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
-                        <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
-                        <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
-                        <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                        <li><a href="https://www.facebook.com/d.arjun03"><ion-icon name="logo-facebook"></ion-icon></a></li>
+                        <li><a href="https://github.com/Arjun650"><ion-icon name="logo-twitter"></ion-icon></a></li>
+                        <li><a href="https://www.instagram.com/d.arjun03/"><ion-icon name="logo-instagram"></ion-icon></a></li>
+                        <li><a href="https://www.linkedin.com/in/arjundas03/"><ion-icon name="logo-linkedin"></ion-icon></a></li>
                     </ul>
                 </div>
 
