--- a/review/review.html
+++ b/review/review.html
@@ -21,7 +21,7 @@
   <body>
     <header>
       <div id="menu-bar" class="fas fa-bars"></div>
-      <a href="#" class="logo"> <span>T</span>RAVELO</a>
+      <a href="./../index.html" class="logo"> <span>T</span>RAVELO</a>
 
       <nav class="navbar">
         <a href="./../index.html" id="homeNav"
@@ -29,7 +29,7 @@
         ></a>
         <a href="./../book.html" >book</a>
         <a href="./../packages.html">packages</a>
-        <a href="#services">services</a>
+        <a href="./../index.html#service">services</a>
         <a href="./../gallery/gallery.html">Gallary</a>
         <a href="./../review/review.html">review</a>
         <a href="#contact">contact</a>
