--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
              <!--form-->
             <div class="contact form">
                 <h3>Send a message</h3>
-                <form action="#" id="myform">
+                <form action="javascript:void(0);" id="myform">
                     <div class="formBox">
                         <div class="row50">
                             <div class="inputBox">
