--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- login form container -->
     <div class="login-form-container">
       <i class="fa-sharp fa-solid fa-circle-xmark" id="form-close"></i>
-      <form action="./index.html">
+      <form action="javascript:void(0);">
         <h3>login</h3>
         <input type="email" class="box" id="emaill" onclick="validat()" placeholder="Your Email" />
         <input type="password" class="box" id="pass" onclick="validat()" placeholder="Your Password" />
