--- a/index.html
+++ b/index.html
@@ -139,25 +139,23 @@
         <div class="box">
             <img src="./media_content/pop2.jpg" alt="pop1" />
             <div class="content">
-              <h3><i class="fa-solid fa-location-dot"></i>Mt.Everest</h3>
+              <h3><i class="fa-solid fa-location-dot"></i>Sweden</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
-                dolorem sapiente recusandae exercitationem! Corporis rerum, quidem
-                perspiciatis a quam omnis placeat nostrum esse unde sed itaque
-                ipsa quisquam quasi officia.
+                Sweden, the land of captivating landscapes and rich cultural heritage.<br> Experience the perfect blend of vibrant cities, breathtaking nature, and a society renowned for its sustainability and innovation.Immerse yourself in Swedish culture by visiting historic landmarks such as the royal palace, a UNESCO World Heritage site, or the ancient Viking rune stones scattered across the country.
               </p>
             </div>
             <div class="button">
-              <a href="./packages.html" class="btn">Know More</a>
+              <div>
+              <a href="./packages.html" class="btn">Know More</a></div>
             </div>
           </div>
 
           <div class="box">
             <img src="./media_content/pop3.jpg" alt="pop1" />
             <div class="content">
-              <h3><i class="fa-solid fa-location-dot"></i>Mt.Everest</h3>
+              <h3><i class="fa-solid fa-location-dot"></i>Kerala Houseboat</h3>
               <p>
-                Lorem ipsum d
+                Kerala is renowned for its magnificent vistas, rich vegetation, and houseboats, in addition to its backwaters.<br> The traditional houseboat of Kerala is known by the name Kettuvallam. The greatest areas in Kerala for houseboat vacations include Alappuzha, Vembanad, and Kollam. These houseboats are highly known for their overnight houseboat tours and for making fast trips through backwaters.
               </p>
             </div>
             <div class="button">
@@ -341,7 +339,7 @@
                     <img src="./media_content/gall1.jpg" alt="gall1">
                     <div class="content">
                         <h3>Religious Site</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>See more photos from @travello.</p>
                         <!-- <input type="button" class="btn" value="See more"> -->
                         <a href="./gallery/gallery.html" class="btn" style="text-decoration: none;">See more</a>
                     </div>
@@ -351,7 +349,7 @@
                     <img src="./gallery/mountain10.jpg" alt="gall1">
                     <div class="content">
                         <h3>Mountain</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>See more photos from @travello.</p>
                         <a href="./gallery/gallery.html" class="btn" style="text-decoration: none;">See more</a>
                     </div>
                 </div>
@@ -360,7 +358,7 @@
                     <img src="./media_content/gall5.jpg" alt="gall1">
                     <div class="content">
                         <h3>Historical</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>See more photos from @travello.</p>
                         <a href="./gallery/gallery.html" class="btn" style="text-decoration: none;">See more</a>
                     </div>
                 </div>
@@ -368,17 +366,17 @@
                     <img src="./gallery/nature2.jpg" alt="gall1">
                     <div class="content">
                         <h3>Nature</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>See more photos from @travello.</p>
                         <a href="./gallery/gallery.html" class="btn" style="text-decoration: none;">See more</a>
                     </div>
                 </div>
 
 
                 <div class="box">
-                    <img src="./gallery/adv1.jpg" alt="gall1">
+                    <img src="./gallery/life7.jpg" alt="gall1">
                     <div class="content">
-                        <h3>Adventure</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <h3>Trekking</h3>
+                        <p>See more photos from @travello.</p>
                         <a href="./gallery/gallery.html" class="btn" style="text-decoration: none;">See more</a>
                     </div>
                 </div>
@@ -386,11 +384,20 @@
                 <div class="box">
                     <img src="./media_content/gall3.jpeg" alt="gall1">
                     <div class="content">
-                        <h3>Trekking</h3>
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <h3>Adventure</h3>
+                        <p>See more photos from @travello.</p>
                         <a href="./gallery/gallery.html" class="btn" style="text-decoration: none;">See more</a>
                     </div>
                 </div>
+
+                <div class="box">
+                  <img src="./gallery/life2.jpg" alt="gall1">
+                  <div class="content">
+                      <h3>Boating</h3>
+                      <p>See more photos from @travello.</p>
+                      <a href="./gallery/gallery.html" class="btn" style="text-decoration: none;">See more</a>
+                  </div>
+              </div>
                 
             </div>
         </section>
